@startuml
hide circle
skinparam linetype ortho

' === Entities (PK được ghi trong ngoặc) ===
class nguoi_dung {
  + ma_sinh_vien : PK
  --
  vai_tro
  lop
  ho_ten
  email
  email_verified_at
  mat_khau
  so_dien_thoai
  trang_thai
  duong_dan_anh
}

class loai_su_kien {
  + ma_loai_su_kien : PK
  --
  ten_loai
  mo_ta
}

class su_kien {
  + ma_su_kien : PK
  --
  ten_su_kien
  mo_ta_chi_tiet
  ma_loai_su_kien
  la_mau_bai_dang
  thoi_gian_bat_dau
  thoi_gian_ket_thuc
  dia_diem
  anh_su_kien
  bo_cuc
  qr_checkin_token
  qr_code_path
  so_luong_toi_da
  so_luong_hien_tai
  diem_cong
  ma_nguoi_tao
  ma_nguoi_to_chuc
  trang_thai
  created_at
  updated_at
  deleted_at
}

class dang_ky {
  + ma_dang_ky : PK
  --
  ma_sinh_vien
  ma_su_kien
  thoi_gian_dang_ky
  trang_thai_tham_gia
  deleted_at
  created_at
  updated_at
}

class chi_tiet_diem_danh {
  + ma_chi_tiet_diem_danh : PK
  --
  ma_dang_ky
  ma_su_kien
  ma_sinh_vien
  loai_diem_danh
  diem_danh_at
}

class lich_su_diem {
  + ma_lich_su_diem : PK
  --
  ma_sinh_vien
  ma_dang_ky
  diem
  nguon
  loai_log
  mo_ta
  context
  thoi_gian_ghi_nhan
}

class thong_bao {
  + ma_thong_bao : PK
  --
  ma_sinh_vien
  ma_su_kien_lien_quan
  tieu_de
  noi_dung
  da_doc
  loai_thong_bao
}

class thu_vien_da_phuong_tien {
  + ma_phuong_tien : PK
  --
  ma_su_kien
  ma_nguoi_tai_len
  ten_tep
  duong_dan_tep
  loai_tep
  kich_thuoc
}

class the_anh {
  + ma_the_anh : PK
  --
  ten_the
  mo_ta
  mau_sac
  ma_nguoi_tao
}

class the_anh_thu_vien {
  + id : PK
  --
  ma_the_anh
  ma_phuong_tien
}

class mau_bai_dang {
  + ma_mau : PK
  --
  ma_loai_su_kien
  ma_nguoi_tao
  ten_mau
  noi_dung
  dia_diem
  so_luong_toi_da
  diem_cong
  anh_su_kien
  bo_cuc
}

class bau_cu {
  + ma_bau_cu : PK
  --
  ma_nguoi_tao
  tieu_de
  mo_ta
  thoi_gian_bat_dau
  thoi_gian_ket_thuc
  so_chon_toi_thieu
  so_chon_toi_da
  hien_thi
  hien_thi_ket_qua
  trang_thai
}

class cu_tri {
  + ma_cu_tri : PK
  --
  ma_bau_cu
  ma_sinh_vien
  da_bo_phieu
  thoi_gian_bo_phieu
}

class ung_cu_vien {
  + ma_ung_cu_vien : PK
  --
  ma_bau_cu
  ho_ten
  lop
  ma_sinh_vien
  diem_trung_binh
  diem_ren_luyen
}

class phieu_bau {
  + ma_phieu_bau : PK
  --
  ma_bau_cu
  hash_ip
  thoi_gian_gui
}

class chi_tiet_phieu_bau {
  + ma_chi_tiet : PK
  --
  ma_phieu_bau
  ma_ung_cu_vien
  created_at
  updated_at
}

' === Relationships (only tables, no FK annotations) ===
loai_su_kien "1" -- "*" su_kien
nguoi_dung "1" -- "*" su_kien

nguoi_dung "1" -- "*" dang_ky
su_kien "1" -- "*" dang_ky

dang_ky "1" -- "*" chi_tiet_diem_danh
su_kien "1" -- "*" chi_tiet_diem_danh
nguoi_dung "1" -- "*" chi_tiet_diem_danh

guoi_dung "1" -- "*" lich_su_diem
dang_ky "0..*" -- "*" lich_su_diem

nguoi_dung "1" -- "*" thong_bao
su_kien "0..*" -- "*" thong_bao

su_kien "0..*" -- "*" thu_vien_da_phuong_tien
nguoi_dung "0..*" -- "*" thu_vien_da_phuong_tien

thu_vien_da_phuong_tien "1" -- "*" the_anh_thu_vien
the_anh "1" -- "*" the_anh_thu_vien

loai_su_kien "0..*" -- "*" mau_bai_dang
nguoi_dung "0..*" -- "*" mau_bai_dang

nguoi_dung "1" -- "*" bau_cu
bau_cu "1" -- "*" cu_tri
nguoi_dung "1" -- "*" cu_tri

bau_cu "1" -- "*" ung_cu_vien

bau_cu "1" -- "*" phieu_bau
phieu_bau "1" -- "*" chi_tiet_phieu_bau
ung_cu_vien "1" -- "*" chi_tiet_phieu_bau


@enduml

